// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
<div
  className="sc-bdVaJa cahKXE"
/>
`;

exports[`Flex renders 1`] = `
<div
  className="sc-htpNat eLQHN sc-bdVaJa iHZvIS"
/>
`;

exports[`Grid renders 1`] = `
<div
  className="sc-bwzfXH fIMJGd sc-bdVaJa iHZvIS"
/>
`;
